[package]
name = "server"
version = "0.1.0"
authors = ["Tomoya Matsubara <matsubara.tomoya@student-cs.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
chrono = "0.4"
